{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 104,
  "lineage": "4315aa74-bde3-e56e-e599-4fbea033486f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-publico",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4bbe621c8b74c88",
            "association_id": "eipassoc-06717063b97d3dbc0",
            "domain": "vpc",
            "id": "eipalloc-0c4bbe621c8b74c88",
            "instance": "i-0e06744e7a942d16d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07526287df23477d5",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_ip": "10.0.1.241",
            "public_dns": "ec2-52-2-192-2.compute-1.amazonaws.com",
            "public_ip": "52.2.192.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.ami_ubuntu",
            "module.docker_ec2_instance.aws_instance.this",
            "module.docker_ec2_instance.aws_spot_instance_request.this",
            "module.docker_sg.module.sg.aws_security_group.this",
            "module.docker_sg.module.sg.aws_security_group.this_name_prefix",
            "module.my-vpc.aws_subnet.projeto-sub1",
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        }
      ]
    },
    {
      "module": "module.docker_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a6b2839d44d781b2",
            "arn": "arn:aws:ec2:us-east-1:421371096383:instance/i-0e06744e7a942d16d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e06744e7a942d16d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chave-new-gen",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-07526287df23477d5",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ccb623232bb01bda",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062a8551819454723",
            "tags": {
              "Docker": "true",
              "Name": "docker-projeto",
              "Terraform": "true"
            },
            "tags_all": {
              "Docker": "true",
              "Name": "docker-projeto",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "docker-projeto"
            },
            "vpc_security_group_ids": [
              "sg-04e99752901654437"
            ]
          },
          "dependencies": [
            "data.aws_ami.ami_ubuntu",
            "module.docker_sg.module.sg.aws_security_group.this",
            "module.docker_sg.module.sg.aws_security_group.this_name_prefix",
            "module.my-vpc.aws_subnet.projeto-sub1",
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        }
      ]
    },
    {
      "module": "module.docker_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421371096383:security-group/sg-04e99752901654437",
            "description": "Security Group para a Instancia com Docker",
            "egress": [],
            "id": "sg-04e99752901654437",
            "ingress": [],
            "name": "docker-instance-sg-20221202121315828600000001",
            "name_prefix": "docker-instance-sg-",
            "owner_id": "421371096383",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker-instance-sg"
            },
            "tags_all": {
              "Name": "docker-instance-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0cf0571147e371b8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc_projeto"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.docker_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3774544789",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04e99752901654437",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.docker_sg.module.sg.aws_security_group.this",
            "module.docker_sg.module.sg.aws_security_group.this_name_prefix",
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        }
      ]
    },
    {
      "module": "module.docker_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-767940320",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e99752901654437",
            "security_group_rule_id": "sgr-07615e73a264b3398",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.docker_sg.module.sg.aws_security_group.this",
            "module.docker_sg.module.sg.aws_security_group.this_name_prefix",
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-2548943674",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04e99752901654437",
            "security_group_rule_id": "sgr-0a9f831eca710852b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.docker_sg.module.sg.aws_security_group.this",
            "module.docker_sg.module.sg.aws_security_group.this_name_prefix",
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        }
      ]
    },
    {
      "module": "module.docker_sg.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-3161102493",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04e99752901654437",
            "security_group_rule_id": "sgr-0ea93ff2fdda007c1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.docker_sg.module.sg.aws_security_group.this",
            "module.docker_sg.module.sg.aws_security_group.this_name_prefix",
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_projeto-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421371096383:internet-gateway/igw-0ea553f9a3886e271",
            "id": "igw-0ea553f9a3886e271",
            "owner_id": "421371096383",
            "tags": {
              "Name": "Projeto-VPC-IGW"
            },
            "tags_all": {
              "Name": "Projeto-VPC-IGW"
            },
            "vpc_id": "vpc-0cf0571147e371b8c"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421371096383:route-table/rtb-07bf5e387e0e63f64",
            "id": "rtb-07bf5e387e0e63f64",
            "owner_id": "421371096383",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea553f9a3886e271",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf0571147e371b8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my-vpc.aws_internet_gateway.vpc_projeto-igw",
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-sub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03730dbec367ba407",
            "route_table_id": "rtb-07bf5e387e0e63f64",
            "subnet_id": "subnet-062a8551819454723"
          },
          "dependencies": [
            "module.my-vpc.aws_internet_gateway.vpc_projeto-igw",
            "module.my-vpc.aws_route_table.public-route",
            "module.my-vpc.aws_subnet.projeto-sub1",
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "projeto-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421371096383:subnet/subnet-062a8551819454723",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062a8551819454723",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421371096383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1a"
            },
            "tags_all": {
              "Name": "Public-Subnet-1a"
            },
            "vpc_id": "vpc-0cf0571147e371b8c"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "projeto-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421371096383:subnet/subnet-0f3630cac0f4dfede",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3630cac0f4dfede",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "421371096383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-1a"
            },
            "tags_all": {
              "Name": "Private-Subnet-1a"
            },
            "vpc_id": "vpc-0cf0571147e371b8c"
          },
          "dependencies": [
            "module.my-vpc.aws_vpc.vpc_projeto"
          ]
        }
      ]
    },
    {
      "module": "module.my-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_projeto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:421371096383:vpc/vpc-0cf0571147e371b8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-033a745132a9dbbc7",
            "default_route_table_id": "rtb-037efd8c5fe81e4ab",
            "default_security_group_id": "sg-0e2066ed1b4132dbc",
            "dhcp_options_id": "dopt-0b2a89c8a2bc55a05",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf0571147e371b8c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-037efd8c5fe81e4ab",
            "owner_id": "421371096383",
            "tags": {
              "Name": "VPC-Projeto"
            },
            "tags_all": {
              "Name": "VPC-Projeto"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}